fix: nop on shift+left when cursor is at the start of the doc

--- a/packages/carbon-blocks-react/src/bem.styl
+++ b/packages/carbon-blocks-react/src/bem.styl
@@ -631,3 +631,4 @@ select#carbon-code-themes
   border-radius 4px
   font-size 14px
   margin 10px 0
+  user-select none
